# LLM_council

./: README.md  main.py  pyproject.toml  start.sh
backend/: config.py  council.py  main.py  openrouter.py  storage.py
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
