[project]
name = "llm-council"
version = "0.1.0"
description = "LLM Council - Multi-model deliberation system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.0"
]

[tool.uv]
package = false
